--- a/cart.html
+++ b/cart.html
@@ -7,6 +7,8 @@
     <title>Cart</title>
 </head>
 <body>
+
+
 <header>
     <!-- header bar that is going to appear at the top of the screen -->
     <div class="logo"><img src="uclan.png" alt="UCLan logo">
@@ -23,7 +25,8 @@
             <li class ="menuList"></li>
         </ul>
     </div>
-    <nav> <!-- place the navigation links in a <nav> tag for accessibility purposes -->
+    <!-- Navigation list-->
+    <nav>
         <ul class="myNav" id="myNavId">
             <li class="navList"><a href="index.html">Home</a></li> <!-- each list item contains a link (marked by the anchor tag -->
             <li class="navList"><a href="products.html">Products</a> </li>
@@ -31,13 +34,70 @@
         </ul>
     </nav>
 </header>
+<!--Hidden navigation list for burger menu-->
 <ul class="hiddenNav" id="hiddenNav">
     <li class="hiddenList"><a href="index.html">Home</a></li> <!-- each list item contains a link (marked by the anchor tag -->
     <li class="hiddenList"><a href="products.html">Products</a> </li>
     <li class="hiddenList"><a href="cart.html">Cart</a> </li>
 </ul>
 
+<!--Cart content-->
+<div class="cartHeader">
+<h2>
+    Shopping cart
+</h2>
+    <p>The items you've added to your shopping cart are:</p>
+</div>
+
+<div id="cartText">
+<div>Item</div>
+    <div>Product</div>
+</div>
+<div id="products"></div>
+
+<div id="clearCart">
+<a href="" onclick="clearCart()">
+    Clear cart
+</a>
+</div>
+
+<!--The footer-->
+<div class="footer">
+    <div  class="footerText">
+        <p>
+            <span class="heading"><b>Links</b></span>
+            <br>
+            <br>
+            <a href="https://www.uclansu.co.uk/">Students' Union</a>
+        </p>
+    </div>
+    <div class="footerText">
+        <p>
+            <span class="heading"><b>Contact</b></span>
+            <br>
+            <br>
+            Email: suinformation@uclan.ac.uk
+            <br>
+            Phone: 01772 89 3000
+        </p>
+    </div>
+    <div class="footerText">
+        <p>
+            <span class="heading"><b>Location</b></span>
+            <br>
+            <br>
+            University of Central Lancashire Students' Union.
+            Fylde Road, Preston PR1 7BY
+            Registered in England
+            Company Number: 7623917
+            Registered Charity Number: 1142516
+        </p>
+    </div>
+</div>
 
 
+<!-- external scripts -->
+<script src="script.js"></script>
+<script src="localProduct.js"></script>
 </body>
 </html>
