--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">    <link rel="stylesheet" type="text/css" href="style1.css" /><!-- link to the stylesheet -->
-    <script src="script.js"></script>
-    <title>Title</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="style1.css" /><!-- link to the stylesheet -->
+    <script src="script.js"></script> <!--external javascript-->
+    <title>Home</title>
 </head>
 <body>
 <header>
@@ -15,7 +16,7 @@
 
     <!--Burger Menu-->
     <div>
-    <button id="button" onclick="menuFunction()">
+    <button id="burgerButton" onclick="menuFunction()">
     </button>
         <ul class="myMenu">
             <li class="menuList"></li>
@@ -23,7 +24,8 @@
             <li class ="menuList"></li>
         </ul>
     </div>
-    <nav> <!-- place the navigation links in a <nav> tag for accessibility purposes -->
+    <!--Navigation List-->
+    <nav>
         <ul class="myNav" id="myNavId">
             <li class="navList"><a href="index.html">Home</a></li> <!-- each list item contains a link (marked by the anchor tag -->
             <li class="navList"><a href="products.html">Products</a> </li>
@@ -32,12 +34,14 @@
     </nav>
 </header>
 
+<!--Hidden navigation list for burger menu-->
 <ul class="hiddenNav" id="hiddenNav">
-    <li class="hiddenList"><a href="index.html">Home</a></li> <!-- each list item contains a link (marked by the anchor tag -->
+    <li class="hiddenList"><a href="index.html">Home</a></li>
     <li class="hiddenList"><a href="products.html">Products</a> </li>
     <li class="hiddenList"><a href="cart.html">Cart</a> </li>
 </ul>
 
+<!--Content of the page with 1 iframe and 1 video-->
 <div class="content" >
     <h1>
         Where opportunity Creates Success
@@ -57,6 +61,7 @@
     <iframe class="video" width="900" height="350" src="https://www.youtube.com/embed/i2CRunZv9CU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
+<!--The footer-->
 <div class="footer">
     <div  class="footerText">
         <p>
