--- a/products.html
+++ b/products.html
@@ -2,21 +2,22 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">    <link rel="stylesheet" type="text/css" href="style1.css" /> <!-- link to the stylesheet -->
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="style1.css" /> <!-- link to the stylesheet -->
     <title>Products</title>
 </head>
 <body>
 
 <header>
 
-    <!-- header banner -->
+    <!-- header bar that is going to appear at the top of the screen -->
     <div class="logo"><img src="uclan.png" alt="UCLan logo">
         <span id="shopText"><b>Student Shop</b></span>
     </div>
 
     <!--Burger Menu-->
     <div>
-        <button id="button" onclick="menuFunction()">
+        <button id="burgerButton" onclick="menuFunction()">
         </button>
         <ul class="myMenu">
             <li class="menuList"></li>
@@ -28,14 +29,14 @@
 <!-- Navigation list-->
     <nav>
         <ul class="myNav" id="myNavId">
-            <li class="navList"><a href="index.html">Home</a></li> <!-- each list item contains a link (marked by the anchor tag -->
+            <li class="navList"><a href="index.html">Home</a></li>
             <li class="navList"><a href="products.html">Products</a> </li>
             <li class="navList"><a href="cart.html">Cart</a> </li>
         </ul>
     </nav>
 </header>
 
-<!-- hidden list for burger menu-->
+<!--Hidden navigation list for burger menu-->
 <ul class="hiddenNav" id="hiddenNav">
     <li class="hiddenList"><a href="index.html">Home</a></li> <!-- each list item contains a link (marked by the anchor tag -->
     <li class="hiddenList"><a href="products.html">Products</a> </li>
@@ -49,11 +50,10 @@
 <p id="return"><a href="#myNavId">top</a></p>
 
 <!-- All products-->
-
 <div class="clothes" id="clothes">
-
 </div>
 
+<!--The footer-->
 <div class="footer">
     <div  class="footerText">
         <p>
@@ -86,8 +86,9 @@
         </p>
     </div>
 </div>
-<!-- external script -->
 
+
+<!-- external script -->
 <script src="script.js"></script>
 </body>
 </html>
